--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="/styles/style.css"></link>
+  <link rel="stylesheet" href="styles/style.css"></link>
 </head>
 
 
@@ -25,7 +25,7 @@
   </div>
 
 
-<script src="/scripts/DOM.js"  type='module' charset="utf-8"></script>
+<script src="scripts/DOM.js"  type='module' charset="utf-8"></script>
 </body>
 
 </html>
