--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <head>
   <link rel="stylesheet" href="styles/style.css"></link>
+  <script src="p5.js"></script>
+  <script src="p5.speech.js"></script>
 </head>
 
 
@@ -26,6 +28,8 @@
 
 
 <script src="scripts/DOM.js"  type='module' charset="utf-8"></script>
+
+
 </body>
 
 </html>
